--- a/index.html
+++ b/index.html
@@ -3,7 +3,173 @@
 <head>
   <meta charset="UTF-8" />
   <title>Supplier Management</title>
-  <link rel="stylesheet" href="styles.css" />
+  <style>* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+}
+
+body {
+  display: flex;
+  min-height: 100vh;
+  background: #f4f6f8;
+  color: #1f2933;
+}
+
+
+.sidebar {
+  width: 70px;
+  background: #2b2bb2;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 16px;
+}
+
+.logo {
+  font-weight: 600;
+  margin-bottom: 24px;
+}
+
+.nav-item {
+  display: block;
+  writing-mode: vertical-rl;
+  transform: rotate(180deg);
+  text-decoration: none;
+  color: #c7d2ff;
+  padding: 12px 0;
+  font-size: 11px;
+}
+
+.nav-item.active,
+.nav-item:hover {
+  color: #ffffff;
+}
+
+.main {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.topbar {
+  height: 56px;
+  background: #f9fafb;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 24px;
+  border-bottom: 1px solid #e5e7eb;
+}
+
+.topbar h1 {
+  font-size: 14px;
+  letter-spacing: 2px;
+}
+
+.user-area {
+  text-align: right;
+  font-size: 12px;
+}
+
+.user-role {
+  display: block;
+  color: #6b7280;
+}
+
+.content {
+  padding: 20px 24px;
+}
+
+.content-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 12px;
+}
+
+.content-header h2 {
+  font-size: 16px;
+}
+
+.btn-primary {
+  background: #2b2bb2;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  padding: 8px 14px;
+  font-size: 13px;
+  cursor: pointer;
+}
+
+.btn-primary:hover {
+  background: #23239a;
+}
+
+.table-wrapper {
+  background: #ffffff;
+  border-radius: 6px;
+  border: 1px solid #e5e7eb;
+  overflow-x: auto;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  font-size: 13px;
+}
+
+thead {
+  background: #f3f4f6;
+  text-align: left;
+}
+
+th,
+td {
+  padding: 10px 12px;
+  white-space: nowrap;
+}
+
+tbody tr:nth-child(even) {
+  background: #f9fafb;
+}
+
+.badge {
+  padding: 3px 10px;
+  border-radius: 999px;
+  font-size: 11px;
+}
+
+.badge-active {
+  background: #dcfce7;
+  color: #15803d;
+}
+
+
+.icon-btn {
+  border: none;
+  background: transparent;
+  cursor: pointer;
+  font-size: 14px;
+  margin-right: 4px;
+}
+
+
+@media (max-width: 768px) {
+  .sidebar {
+    display: none;
+  }
+
+  .topbar {
+    padding: 0 12px;
+  }
+
+  .content {
+    padding: 12px;
+  }
+}</style>
 </head>
 <body>
   <aside class="sidebar">
@@ -62,7 +228,30 @@
       </div>
     </section>
   </div>
+  <script>  const addBtn = document.getElementById("addSupplierBtn");
+const tbody = document.getElementById("supplierBody");
 
-  <script src="java.js"></script>
+addBtn.addEventListener("click", () => {
+  const row = document.createElement("tr");
+  row.innerHTML = `
+    <td>New Supplier</td>
+    <td>${Math.floor(Math.random() * 900000) + 100000}</td>
+    <td>Main Street</td>
+    <td>City</td>
+    <td>+91 0000000000</td>
+    <td><span class="badge badge-active">Active</span></td>
+    <td>
+      <button class="icon-btn edit">✏</button>
+      <button class="icon-btn delete">🗑</button>
+    </td>
+  `;
+  tbody.appendChild(row);
+});
+
+tbody.addEventListener("click", (e) => {
+  if (e.target.classList.contains("delete")) {
+    e.target.closest("tr").remove();
+  }
+});</script>
 </body>
 </html>
