--- a/index.html
+++ b/index.html
@@ -194,6 +194,9 @@ tbody tr:nth-child(even) {
     <section class="content">
       <div class="content-header">
         <h2>Suppliers</h2>
+        <label for="sreach-button">
+          <input type="text" id="search-input" placeholder="Search Suppliers..." />
+        </label>
         <button id="addSupplierBtn" class="btn-primary">+ Add Supplier</button>
       </div>
 
